--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -250,7 +250,7 @@ td {
     overflow-y: scroll;
   }
   #table_scroll {
-    width: 100%;
+    max-width: 620px;
     margin-top: 380px;
     margin-bottom: 380px;
     border-collapse: collapse;
@@ -274,6 +274,10 @@ td {
     font-family: "Poppins", sans-serif;
     font-size: 18px;
     font-weight: 800;
+  }
+
+  td {
+    width: 25%;
   }
 
   #scroll-row {
