--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -43,6 +43,8 @@
    
 </head>
 
+<div class="w3-display-middle" id="nudge"></div>
+
 <!-- Sidebar/menu -->
 <nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:250px;font-weight:bold;" id="mySidebar">
     <br>
