--- a/views/discover.handlebars
+++ b/views/discover.handlebars
@@ -1,6 +1,3 @@
-<!-- Hidden Element Containing Value of Logged In UserID -->
-<input type="hidden" value="{{user.id}}" id="user-id">
-
 <!-- Hidden Loading Element GIF-->
 <div class="w3-display-middle" id="loading">
     <img src="/assets/img/loading.gif" style="position:fixed;" width="200px">
@@ -125,7 +122,10 @@
 
   $(function() {
     // Gets events from our database to display in each profile.
-    //var userID = $("#user-id").val();
+    var userID = $("#user-id").val();
+    console.log("User: "+userID);
+   
+
     pageScroll();
      $("#contain").mouseover(function() {
         clearTimeout(my_time);
