--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
     <title>EventBuddy</title>
 
     <!--Eventful-->
-    <script type="text/javascript" src="http://api.eventful.com/js/api"></script>
+    <script type="text/javascript" src="https://api.eventful.com/js/api"></script>
 
     <!-- Moment.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
@@ -40,6 +40,8 @@
     <!--Our .js -->
     <script src="/../assets/js/users.js" type="text/javascript"></script>
     <script src="/../assets/js/api.js" type="text/javascript"></script>
+    <script src="/../assets/js/profile.js" type="text/javascript"></script>
+
    
 </head>
 
@@ -95,6 +97,89 @@
 <body class="w3-display-container">
 
     {{{body}}}
+
+    <!-- Hidden Element Containing Value of Logged In UserID -->
+    <input type="hidden" value="{{user.id}}" id="user-id">
+    <input type="hidden" value="" name="fname" id="user-fname">
+
+    <!-- Profile Settings Modal -->
+
+    <div id="settings" class="w3-modal">
+      <div class="w3-modal-content">
+
+        <header class="w3-container w3-red">
+          <span onclick="document.getElementById('settings').style.display='none'" class="w3-button w3-display-topright">&times;</span>
+          <h2>My Account</h2>
+        </header>
+
+        <div class="w3-container">
+
+            <div class="w3-half">
+                <h5>Name: {{user.fname}} {{user.lname}}</h5>
+                <h5>Email: {{#if user}} {{user.email}} {{else}} Add an email address.{{/if}}</h5>
+                <h5>Phone: {{user.phone}}</h5>
+                <h5>
+                  <i class="fa fa-facebook w3-large"></i>{{user.facebook}}</h5>
+                <h5>
+                  <i class="fa fa-twitter w3-large"></i>{{user.twitter}}</h5>
+                <h5>
+                  <i class="fa fa-instagram w3-large"></i>{{user.instagram}}</h5>
+            </div>
+
+            <div class="w3-half">
+                <div class="profile w3-right">
+                    <div class="photo">
+                      <input type="file" accept="image/*">
+                      <div class="photo__helper">
+                          <div class="photo__frame photo__frame--circle">
+
+                            <canvas class="photo__canvas"></canvas>
+                            <div class="message is-empty">
+                              <p class="message--desktop">Drop your photo here or browse your computer.</p>
+                              <p class="message--mobile">Tap here to select your picture.</p>
+                            </div>
+                            <div class="message is-loading">
+                              <i class="fa fa-2x fa-spin fa-spinner"></i>
+                            </div>
+                            <div class="message is-dragover">
+                              <i class="fa fa-2x fa-cloud-upload"></i>
+                              <p>Drop your photo.</p>
+                            </div>
+                            <div class="message is-wrong-file-type">
+                              <p>Only images allowed.</p>
+                              <p class="message--desktop">Drop your photo here or browse your computer.</p>
+                              <p class="message--mobile">Tap here to select your picture.</p>
+                            </div>
+                            <div class="message is-wrong-image-size">
+                              <p>Your photo must be larger than 350px.</p>
+                            </div>
+
+                          </div>
+                      </div>
+
+                    <div class="photo__options hide">
+                      <div class="photo__zoom">
+                        <input type="range" class="zoom-handler">
+                      </div>
+                      <a href="javascript:;" class="remove">
+                        <i class="fa fa-trash"></i>
+                      </a>
+                    </div>
+                    <button type="button w3-bottom-right" id="previewBtn">Preview</button>
+                    <img src="" alt="" class="preview preview--rounded">
+                </div>
+            </div>
+        </div>
+        </div>
+
+        <footer class="w3-container w3-red">
+          <a href="/logout" class="w3-btn w3-red w3-border w3-right logout">Logout</a>
+          <button href="/account-settings" class=" update-btn w3-btn w3-border w3-red w3-left update">Update Information</button>
+        </footer>
+
+      </div>
+    </div>
+
 
 </body>
 
