--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -18,6 +18,7 @@
 				<!-- Registration FORM -->
 				<form class="w3-padding" action="/signup" method="post">
 					<div class="w3-section">
+
 						<div class="form-group">
 							<label>
 								<b>Username</b>
@@ -25,11 +26,25 @@
 							<input class="w3-input w3-border w3-margin-bottom form-control" type="text" placeholder="Enter Username" name="username"
 							 required>
 						</div>
+
 						<div class="form-group">
 							<label>
 								<b>Password</b>
 							</label>
-							<input class="w3-input w3-border form-control" type="password" placeholder="Enter Password" name="password" required>
+							<input class="w3-input w3-border w3-margin-bottom form-control" type="password" placeholder="Enter Password" name="password" required>
+						</div>
+
+						<div class="form-group">
+							<label>
+								<b>First Name</b>
+							</label>
+							<input class="w3-input w3-border w3-margin-bottom form-control" type="text" placeholder="First Name" name="fname">
+						</div>
+						<div class="form-group">
+							<label>
+								<b>Last Name</b>
+							</label>
+							<input class="w3-input w3-border w3-margin-bottom form-control" type="text" placeholder="Last Name" name="lname">
 						</div>
 					</div>
 					<br>
