--- a/views/account-setup.handlebars
+++ b/views/account-setup.handlebars
@@ -23,9 +23,9 @@
           </fieldset>
           <fieldset>
             <h2 class="fs-title">Social Profiles</h2>
-            <h3 class="fs-subtitle">Your presence on the social network</h3>
+            {{!-- <h3 class="fs-subtitle">Your presence on the social network</h3> --}}
 
-            <div class="profile">
+            {{!-- <div class="profile">
                     <div class="photo">
                       <input type="file" accept="image/*">
                       <div class="w3-center photo__helper">
@@ -66,8 +66,8 @@
                     <button type="w3-btn w3-border w3-bottom-right" id="previewBtn">Preview</button>
                     <img src="" alt="" class="preview preview--rounded">
                 </div>
-            </div>
-  
+            </div> --}}
+            <input type="text" name="profilePic" id="profilepic" placeholder="Link to your profile picture." />
             <input type="text" name="twitter" id="twitter" placeholder="Twitter" />
             <input type="text" name="facebook" id="facebook" placeholder="Facebook" />
             <input type="text" name="gplus" id="gplus" placeholder="Google Plus" />
